# backend/docs/swagger.yaml
@@ -4770,6 +4770,41 @@ paths:
       summary: Update Presensi Pegawai
       tags:
       - presensi
+  /api/presensi/pegawai/me:
+    get:
+      consumes:
+      - application/json
+      description: |-
+        Mengambil presensi pegawai diri sendiri
+
+        **Akses:** Logged User
+
+        **Error yang mungkin terjadi:**
+        - `400` Tidak ada presensi dengan id tersebut -> `message: "failed to get presensi", error: "presensi not found"`
+        - `401` Authorization header tidak ada -> `message: "failed_auth", error: "Authorization header missing"`
+        - `401` Format header salah (bukan "Bearer ...") -> `message: "failed_auth", error: "invalid authentication header"`
+        - `401` Token JWT tidak valid atau kedaluwarsa -> `message: "failed_auth", error: "invalid token"`
+        - `403` user tidak memiliki akses -> `message: "kelas anda tidak diizinkan", error: "Forbidden"`
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/web-hosting_internal_package_utils.Response-any-any'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/web-hosting_internal_package_swagger.ErrUnauthorizedInvalidToken'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/web-hosting_internal_package_swagger.ErrForbiddenAccess'
+      security:
+      - ApiKeyAuth: []
+      summary: Get Presensi Pegawai diri sendiri
+      tags:
+      - presensi
   /api/prodi:
     get:
       consumes:
